[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_pause"]

[node name="PauseMenu" type="Control"]
process_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_pause")

[node name="Overlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="PausePanel" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
color = Color(0.2, 0.2, 0.35, 0.95)

[node name="PauseBorder" type="ColorRect" parent="PausePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.7, 0.7, 0.9, 1)
mouse_filter = 2

[node name="PauseContent" type="ColorRect" parent="PausePanel/PauseBorder"]
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.98
color = Color(0.15, 0.15, 0.25, 1)
mouse_filter = 2

[node name="MenuContainer" type="VBoxContainer" parent="PausePanel/PauseBorder/PauseContent"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
theme_override_constants/separation = 15

[node name="PauseTitle" type="Label" parent="PausePanel/PauseBorder/PauseContent/MenuContainer"]
custom_minimum_size = Vector2(250, 40)
text = "GAME PAUSED"
theme_override_colors/font_color = Color(1, 1, 0.7, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="PausePanel/PauseBorder/PauseContent/MenuContainer"]
custom_minimum_size = Vector2(250, 35)
text = "‚ñ∂ RESUME"
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_font_sizes/font_size = 14

[node name="OptionsButton" type="Button" parent="PausePanel/PauseBorder/PauseContent/MenuContainer"]
custom_minimum_size = Vector2(250, 35)
text = "‚öô OPTIONS"
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_font_sizes/font_size = 14

[node name="MainMenuButton" type="Button" parent="PausePanel/PauseBorder/PauseContent/MenuContainer"]
custom_minimum_size = Vector2(250, 35)
text = "üè† MAIN MENU"
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 14

[node name="QuitButton" type="Button" parent="PausePanel/PauseBorder/PauseContent/MenuContainer"]
custom_minimum_size = Vector2(250, 35)
text = "‚úï QUIT GAME"
theme_override_colors/font_color = Color(1, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 14

[connection signal="pressed" from="PausePanel/PauseBorder/PauseContent/MenuContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PausePanel/PauseBorder/PauseContent/MenuContainer/OptionsButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PausePanel/PauseBorder/PauseContent/MenuContainer/MainMenuButton" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="PausePanel/PauseBorder/PauseContent/MenuContainer/QuitButton" to="." method="_on_quit_pressed"]